database luu ten hinh, duong dan cau hinh o code

--- a/WPF Project/LibraryManagementSystem/LibraryManagementSystem.csproj
+++ b/WPF Project/LibraryManagementSystem/LibraryManagementSystem.csproj
@@ -225,5 +225,8 @@
   <ItemGroup>
     <Resource Include="Images\yoab-anderson-IHC5LPAoGrs-unsplash %282%29.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\abc.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
